--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -3,6 +3,7 @@
 
 Vagrant.configure("2") do |config|
   config.vm.box = "hashicorp/precise32"
+  config.vm.synced_folder "./", "/home/vagrant"
   config.vm.provision "shell", path: "vagrant_provision.sh"
   config.vm.network "private_network", ip: "192.168.13.10"
   config.vm.network "forwarded_port", guest: 5601, host: 5601
